<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".ShelemSheetActivity"
    android:id="@+id/shelemMain">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/teamATitle"
        android:id="@+id/textViewTeamATitle"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="37dp"
        android:layout_marginStart="37dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/teamBTitle"
        android:id="@+id/textViewTeamBTitle"
        android:layout_above="@+id/textViewBFinal"
        android:layout_alignLeft="@+id/textViewBFinal"
        android:layout_alignStart="@+id/textViewBFinal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/teamAFinalPoints"
        android:id="@+id/textViewAFinal"
        android:layout_below="@+id/textViewTeamATitle"
        android:layout_alignLeft="@+id/textViewTeamATitle"
        android:layout_alignStart="@+id/textViewTeamATitle" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/teamBFinalPoints"
        android:id="@+id/textViewBFinal"
        android:layout_alignTop="@+id/textViewAFinal"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submitButton"
        android:id="@+id/buttonSubmit"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberSigned"
        android:ems="10"
        android:id="@+id/editTextA"
        android:layout_below="@+id/textViewAFinal"
        android:layout_alignLeft="@+id/textViewAFinal"
        android:layout_alignStart="@+id/textViewAFinal"
        android:layout_marginTop="87dp"
        android:layout_toStartOf="@+id/buttonSubmit"
        android:layout_alignRight="@+id/textViewTeamATitle"
        android:layout_alignEnd="@+id/textViewTeamATitle" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberSigned"
        android:ems="10"
        android:id="@+id/editTextB"
        android:layout_alignTop="@+id/editTextA"
        android:layout_alignLeft="@+id/textViewTeamBTitle"
        android:layout_alignStart="@+id/textViewTeamBTitle"
        android:layout_alignRight="@+id/textViewTeamBTitle"
        android:layout_alignEnd="@+id/textViewTeamBTitle" />

</RelativeLayout>
